--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node .",
-    "posttest": "npm run lint && nsp check"
+    "posttest": "npm run lint && nsp check",
+    "dev": "mocha ./test/mocha/root.js"
   },
   "dependencies": {
     "compression": "^1.0.3",
@@ -22,8 +23,10 @@
     "strong-error-handler": "^2.0.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "mocha": "^4.0.1",
     "nsp": "^2.1.0"
   },
   "repository": {
