--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,7 @@ image: node:6.11.1
 services:
   - mongo:3.4
 
-cache:
-  paths:
-    - node_modules/
-
-test_async:
+test:
   script:
     - npm install
     - npm run dev
