--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,13 @@ services:
 stages:
   - test
     
-test:
+start_server:
   stage: test
   script:
     - npm install
+    - npm run start
+
+test:
+  stage: test
+  script: 
     - npm run dev
