1. Build Gitlab CI Test Progress

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,11 @@ services:
   - mongo:3.4
 
 stages:
+  - build
   - test
     
 start_server:
-  stage: test
+  stage: build
   script:
     - npm install
     - npm run start
