1. Build Gitlab CI Test Progress

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,14 @@ stages:
   - build
   - test
     
-start_server:
+build:
   stage: build
   script:
     - npm install
 
 test:
   stage: test
+  dependencies:
+    - build          
   script: 
     - npm run dev
