--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,11 @@
-image: node:6.11.1
-
-services:
-  - mongo:3.4
-
 stages:
   - build
   - test
+  - deploy
     
 build:
   stage: build
+  image: node:6.11.1
   script:
     - npm install
   artifacts:
@@ -17,7 +14,16 @@ build:
 
 test:
   stage: test
+  image: node:6.11.1
+  services:
+    - mongo:3.4
   dependencies:
     - build
   script: 
     - npm run dev
+
+deploy:
+  stage: deploy
+  image: python:latest
+  script:
+    - pip install awscli
