--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build:
   artifacts:
     paths:
       - node_modules/
+      - .
 
 test:
   stage: test
@@ -29,5 +30,7 @@ deploy:
     AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
   image: python:latest
   script:
+    - apt-get update
+    - apt-get install -y zip
     - pip install awscli
     - aws s3 ls
