--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ deploy:
   script:
     - apt-get update
     - apt-get install -y zip
-    - zip -r teleclaw_backend_api.zip .
+    - zip -r teleclaw_backend_api.zip package.json server/
+    - ls
     - pip install awscli
     - aws s3 ls
