--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ deploy:
     AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
     AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
     AWS_S3_BUCKET: $AWS_S3_BUCKET
+    AWS_DEFAULT_REGION: ap-southeast-1
   image: python:latest
   dependencies:
     - build
