: 1. Configure repo to deploy to staging enviornment on AWS

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,4 +50,4 @@ deployStaging:
     - aws s3 cp $ZIP_FILE_NAME s3://$AWS_S3_BUCKET
     # Deploy Build to AWS Elastic BeanStalk
     - aws elasticbeanstalk create-application-version --application-name teleclaw_backend_api --version-label $FILE_NAME --source-bundle S3Bucket=$AWS_S3_BUCKET,S3Key=$ZIP_FILE_NAME --auto-create-application
-    - aws elasticbeanstalk update-environment --application-name teleclaw_backend_api --environment-name teleclawBackendApi --version-label $FILE_NAME
+    - aws elasticbeanstalk update-environment --application-name teleclaw_backend_api --environment-name teleclawBackendApi-staging --version-label $FILE_NAME
