--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,9 +74,8 @@ deployProduction:
   script:
     # Define Dynamic Variables
     - TIMESTAMP=$(date +%s)
-    - FILE_NAME="teleclaw_backend_api_$TIMESTAMP"
+    - FILE_NAME="teleclaw_backend_api_$TIMESTAMP_$CI_COMMIT_TAG"
     - ZIP_FILE_NAME="$FILE_NAME.zip"
-    - echo $CI_COMMIT_TAG
     # Install and Execute Zip Tools
     - apt-get update
     - apt-get install -y zip
