1. Add tag name in build version name for distinguish

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,7 @@ deployProduction:
     - buildTest
   when: manual
   only:
+    - tags
     - production
   script:
     # Define Dynamic Variables
