1. Add development server deploy CI mechanism

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,11 +36,15 @@ deployDevelopment:
     name: development
   dependencies:
     - buildTest
+  only:
+    - pushes
   except:
     - master
     - production
   script:
     - echo $GITLAB_USER_EMAIL
+    - echo $GITLAB_USER_LOGIN
+    - echo $GITLAB_USER_NAME
 
 deployStaging:
   stage: deploy
