--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,21 @@ buildTest:
       - package.json
       - server/
 
+buildProduction:
+  stage: build
+  image: node:6.11.1
+  script: 
+    - npm install
+    - gulp rebuild
+    - gulp compress
+    - gulp stripdebug
+    - npm prune --production
+  artifacts:
+      paths:
+        - node_modules/
+        - package.json
+        - build/
+
 test:
   stage: test
   image: node:6.11.1
@@ -21,6 +36,16 @@ test:
     - mongo:3.4
   dependencies:
     - buildTest
+  script: 
+    - npm run dev
+
+testProduction:
+  stage: test
+  image: node:6.11.1
+  services:
+    - mongo:3.4
+  dependencies:
+    - buildProduction
   script: 
     - npm run dev
 
@@ -36,6 +61,7 @@ deployDevelopment:
     name: development
   dependencies:
     - buildTest
+  when: manual
   only:
     - pushes
   except:
@@ -76,6 +102,8 @@ deployStaging:
     # Deploy Build to AWS Elastic BeanStalk
     - aws elasticbeanstalk create-application-version --application-name teleclaw_backend_api --version-label $FILE_NAME --source-bundle S3Bucket=$AWS_S3_BUCKET,S3Key=$ZIP_FILE_NAME --auto-create-application
     - aws elasticbeanstalk update-environment --application-name teleclaw_backend_api --environment-name teleclawBackendApi-staging --version-label $FILE_NAME
+    # remove s3 file after deploy
+    - aws s3 rm s3://$AWS_S3_BUCKET/$ZIP_FILE_NAME
 
 deployProduction:
   stage: deploy
@@ -89,7 +117,7 @@ deployProduction:
     name: production
     url: http://teleclawbackendapi-production.ap-southeast-1.elasticbeanstalk.com/
   dependencies:
-    - buildTest
+    - buildProduction
   when: manual
   only:
     - tags
@@ -102,7 +130,7 @@ deployProduction:
     # Install and Execute Zip Tools
     - apt-get update
     - apt-get install -y zip
-    - zip -r $ZIP_FILE_NAME package.json server/ node_modules/
+    - zip -r $ZIP_FILE_NAME package.json build/ node_modules/
     # Install and Execute AWS CLI
     - pip install awscli
     - aws s3 cp $ZIP_FILE_NAME s3://$AWS_S3_BUCKET
