--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-jsonminify": "^1.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-jsonminify": "^1.0.0",
     "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "mocha": "^4.0.1",
     "nsp": "^2.1.0",
