--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,7 @@ testProduction:
   dependencies:
     - buildProduction
   script: 
+    - npm -g mocha
     - NODE_ENV=production mocha ./test/mocha/root.js
     - npm prune --production
 
