--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "loopback-component-explorer": "^5.0.0",
     "loopback-connector-mongodb": "^3.3.0",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
+    "strong-error-handler": "^2.0.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
