--- a/server/model-config.json
+++ b/server/model-config.json
@@ -85,6 +85,10 @@
       }
     }
   },
+  "userIdentity": {
+    "dataSource": "mongodb",
+    "public": false
+  },
   "ACL": {
     "dataSource": "mongodb",
     "public": false
