--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check",
-    "unitest": "mocha ./test/mocha/authentication"
+    "unitest": "mocha ./test/mocha/productTest"
   },
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "express-session": "^1.15.6",
+    "firebase-admin": "^5.5.1",
     "helmet": "^1.3.0",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
