develop image up to cloudinary

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,11 @@ services:
       - KT_VAR_MONGODB_USERNAME=teleClawAdmin
       - KT_VAR_MONGODB_PASSWORD=123456
       - KT_VAR_MONGODB_DATABASE=teleclaw_dev
+      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
+      - FIREBASE_SERVICE_KEY_NAME=${FIREBASE_SERVICE_KEY_NAME}
+      - FB_APP_SECRET=${FB_APP_SECRET}
+      - FB_CLIENT_ID=${FB_CLIENT_ID}
+      - FB_APP_TOKEN=${FB_APP_TOKEN}
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
