--- a/server/model-config.json
+++ b/server/model-config.json
@@ -100,5 +100,9 @@
   "event": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "tag": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
