--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.swp
 *.tgz
 *.xml
+.env
 .DS_Store
 .idea
 .project
@@ -18,3 +19,4 @@ coverage
 node_modules
 npm-debug.log
 test/data/**
+build/**
