--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check",
-    "unit_test": "mocha ./test/mocha/productTest"
+    "unit_test": "mocha ./test/mocha/image"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
+    "cloudinary": "^1.9.1",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "express-session": "^1.15.6",
@@ -29,6 +30,7 @@
     "loopback-component-explorer": "^5.0.0",
     "loopback-component-passport": "^3.4.1",
     "loopback-connector-mongodb": "^3.3.0",
+    "multer": "^1.3.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0",
     "uuid": "^3.1.0",
