--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "loopback-connector-mongodb": "^3.3.0",
     "multer": "^1.3.0",
     "serve-favicon": "^2.0.1",
+    "socket.io": "^2.0.4",
+    "socketio-auth": "^0.1.0",
     "strong-error-handler": "^2.0.0",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
