--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check",
-    "unit_test": "mocha ./test/mocha/productTest"
+    "unit_test": "mocha ./test/mocha/gamePlay"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
     "cloudinary": "^1.9.1",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "deepstream.io-client-js": "^2.3.0",
     "express-session": "^1.15.6",
     "firebase-admin": "^5.5.1",
     "helmet": "^1.3.0",
