--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "loopback-component-passport": "^3.4.1",
     "loopback-connector-mongodb": "^3.3.0",
     "multer": "^1.3.0",
+    "pusher": "^1.5.1",
     "serve-favicon": "^2.0.1",
     "socket.io": "^2.0.4",
     "socketio-auth": "^0.1.0",
