--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.3.0",
     "pusher": "^1.5.1",
     "serve-favicon": "^2.0.1",
+    "shortid": "^2.2.8",
     "socket.io": "^2.0.4",
     "socketio-auth": "^0.1.0",
     "strong-error-handler": "^2.0.0",
