--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,12 @@ services:
     depends_on:
       - mongo
     environment:
-      - NODE_ENV=development
-      - KT_VAR_MONGODB_HOST=mongo
-      - KT_VAR_MONGODB_PORT=27017
-      - KT_VAR_MONGODB_USERNAME=teleClawAdmin
-      - KT_VAR_MONGODB_PASSWORD=123456
-      - KT_VAR_MONGODB_DATABASE=teleclaw_dev
+      - NODE_ENV=staging
+      - KT_VAR_MONGODB_HOST=${KT_VAR_MONGODB_HOST}
+      - KT_VAR_MONGODB_PORT=${KT_VAR_MONGODB_PORT}
+      - KT_VAR_MONGODB_USERNAME=${KT_VAR_MONGODB_USERNAME}
+      - KT_VAR_MONGODB_PASSWORD=${KT_VAR_MONGODB_PASSWORD}
+      - KT_VAR_MONGODB_DATABASE=${KT_VAR_MONGODB_DATABASE}
       - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
       - FIREBASE_SERVICE_KEY_NAME=${FIREBASE_SERVICE_KEY_NAME}
       - FB_APP_SECRET=${FB_APP_SECRET}
@@ -35,3 +35,6 @@ services:
       - PUSHER_KEY=${PUSHER_KEY}
       - PUSHER_SECRET=${PUSHER_SECRET}
       - PUSHER_CLUSTER=${PUSHER_CLUSTER}
+      - GIZWITS_APPLICATION_ID=${GIZWITS_APPLICATION_ID}
+      - GIZWITS_PRODUCT_SECRET=${GIZWITS_PRODUCT_SECRET}
+      - GIZWITS_PRODUCT_KEY=${GIZWITS_PRODUCT_KEY}
