--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check",
-    "unit_test": "mocha ./test/mocha/machineStatus"
+    "unit_test": "mocha ./test/mocha/productTest"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -31,6 +31,7 @@
     "loopback-component-explorer": "^5.0.0",
     "loopback-component-passport": "^3.4.1",
     "loopback-connector-mongodb": "^3.3.0",
+    "md5": "^2.2.1",
     "multer": "^1.3.0",
     "pusher": "^1.5.1",
     "serve-favicon": "^2.0.1",
