--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,8 @@ services:
     depends_on:
       - mongo
     environment:
-      - NODE_ENV=staging
-      - KT_VAR_MONGODB_HOST=${KT_VAR_MONGODB_HOST}
-      - KT_VAR_MONGODB_PORT=${KT_VAR_MONGODB_PORT}
-      - KT_VAR_MONGODB_USERNAME=${KT_VAR_MONGODB_USERNAME}
-      - KT_VAR_MONGODB_PASSWORD=${KT_VAR_MONGODB_PASSWORD}
-      - KT_VAR_MONGODB_DATABASE=${KT_VAR_MONGODB_DATABASE}
+      - NODE_ENV=development
+      - KT_VAR_MONGODB_URL=${KT_VAR_MONGODB_URL}
       - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
       - FIREBASE_SERVICE_KEY_NAME=${FIREBASE_SERVICE_KEY_NAME}
       - FB_APP_SECRET=${FB_APP_SECRET}
