--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ test:
     - buildProduction
   script: 
     - NODE_ENV=staging npm run unit_test
+    - npm prune --production
 
 testProduction:
   stage: test
