--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,6 @@ services:
     environment:
       - NODE_ENV=development
       - KT_VAR_MONGODB_URL=${KT_VAR_MONGODB_URL}
-      - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
-      - FIREBASE_SERVICE_KEY_NAME=${FIREBASE_SERVICE_KEY_NAME}
       - FB_APP_SECRET=${FB_APP_SECRET}
       - FB_CLIENT_ID=${FB_CLIENT_ID}
       - FB_APP_TOKEN=${FB_APP_TOKEN}
@@ -34,3 +32,7 @@ services:
       - GIZWITS_APPLICATION_ID=${GIZWITS_APPLICATION_ID}
       - GIZWITS_PRODUCT_SECRET=${GIZWITS_PRODUCT_SECRET}
       - GIZWITS_PRODUCT_KEY=${GIZWITS_PRODUCT_KEY}
+      - BRAINTREE_ENV=${BRAINTREE_ENV}
+      - BRAINTREE_MERCHANTID=${BRAINTREE_MERCHANTID}
+      - BRAINTREE_PUBLICKEY=${BRAINTREE_PUBLICKEY}
+      - BRAINTREE_PRIVATEKEY=${BRAINTREE_PRIVATEKEY}
