--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.1",
+    "braintree": "^2.4.0",
     "cloudinary": "^1.9.1",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
