develop delivery in process

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,4 @@ services:
       - BRAINTREE_MERCHANTID=${BRAINTREE_MERCHANTID}
       - BRAINTREE_PUBLICKEY=${BRAINTREE_PUBLICKEY}
       - BRAINTREE_PRIVATEKEY=${BRAINTREE_PRIVATEKEY}
+      - EASYSHIP_TOKEN=${EASYSHIP_TOKEN}
