--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check",
-    "unit_test": "NODE_ENV=staging mocha ./test/mocha/merge"
+    "unit_test": "mocha ./test/mocha/merge"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -50,6 +50,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-node6": "^11.0.0",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
     "gulp": "^3.9.1",
