--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ deployStaging:
     # Install and Execute Zip Tools
     - apt-get update
     - apt-get install -y zip
-    - zip -r $ZIP_FILE_NAME package.json build/ node_modules/
+    - zip -r $ZIP_FILE_NAME package.json build/ 
     # Install and Execute AWS CLI
     - pip install awscli
     - aws s3 cp $ZIP_FILE_NAME s3://$AWS_S3_BUCKET
