--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ deployStaging:
     # Install and Execute Zip Tools
     - apt-get update
     - apt-get install -y zip
-    - zip -r $ZIP_FILE_NAME package.json build/ node_modules/
+    - zip -r $ZIP_FILE_NAME package.json build/
     # Install and Execute AWS CLI
     - pip install awscli
     - aws s3 cp $ZIP_FILE_NAME s3://$AWS_S3_BUCKET
@@ -134,7 +134,7 @@ deployProduction:
     # Install and Execute Zip Tools
     - apt-get update
     - apt-get install -y zip
-    - zip -r $ZIP_FILE_NAME package.json build/ node_modules/
+    - zip -r $ZIP_FILE_NAME package.json build/
     # Install and Execute AWS CLI
     - pip install awscli
     - aws s3 cp $ZIP_FILE_NAME s3://$AWS_S3_BUCKET
