--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint .",
     "start": "node .",
     "posttest": "npm run lint && nsp check",
-    "unit_test": "mocha ./test/mocha/admin"
+    "unit_test": "mocha ./test/mocha/deliveryTest"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
