--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "loopback-component-passport": "^3.4.1",
     "loopback-connector-mongodb": "^3.3.0",
     "md5": "^2.2.1",
+    "moment": "^2.20.1",
     "multer": "^1.3.0",
     "pusher": "^1.5.1",
     "serve-favicon": "^2.0.1",
