--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,5 @@ services:
       - BRAINTREE_PUBLICKEY=${BRAINTREE_PUBLICKEY}
       - BRAINTREE_PRIVATEKEY=${BRAINTREE_PRIVATEKEY}
       - EASYSHIP_TOKEN=${EASYSHIP_TOKEN}
+      - GMAIL_ADDRESS=${GMAIL_ADDRESS}
+      - GMAIL_PASSWORD=${GMAIL_PASSWORD}
