--- a/server/model-config.json
+++ b/server/model-config.json
@@ -13,6 +13,9 @@
       "./mixins"
     ]
   },
+  "Email": {
+    "dataSource": "Email"
+  },
   "machine": {
     "dataSource": "mongodb",
     "public": true
