--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "shortid": "^2.2.8",
     "strong-error-handler": "^2.0.0",
     "uuid": "^3.1.0",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "winston-papertrail": "^1.0.5"
   },
   "devDependencies": {
     "babel": "^6.23.0",
