--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ buildProduction:
         - node_modules/
         - package.json
         - build/
+        - .ebextensions/
         
 test:
   stage: test
@@ -34,6 +35,7 @@ test:
       - node_modules/
       - package.json
       - build/
+      - .ebextensions/
 
 testProduction:
   stage: test
@@ -53,6 +55,7 @@ testProduction:
       - node_modules/
       - package.json
       - build/
+      - .ebextensions/
 
 deployDevelopment:
   stage: deploy
