add better logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,4 @@ services:
       - EASYSHIP_TOKEN=${EASYSHIP_TOKEN}
       - GMAIL_ADDRESS=${GMAIL_ADDRESS}
       - GMAIL_PASSWORD=${GMAIL_PASSWORD}
+      - PAPERTRAIL_PORT=${PAPERTRAIL_PORT}
