--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.5.2",
     "express-session": "^1.15.6",
     "helmet": "^1.3.0",
+    "hmacsha1": "^1.0.0",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
