--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "unit_test": "mocha ./test/mocha/eventAndReward"
   },
   "dependencies": {
+    "@alicloud/pop-core": "^1.5.1",
     "bluebird": "^3.5.1",
     "braintree": "^2.4.0",
     "cloudinary": "^1.9.1",
@@ -25,7 +26,6 @@
     "cors": "^2.5.2",
     "express-session": "^1.15.6",
     "helmet": "^1.3.0",
-    "hmacsha1": "^1.0.0",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
