--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,14 @@
 {
-  "extends": "loopback"
+  "env": {
+      "node": true, 
+      "browser": true, 
+      "es6": true,
+      "jest": true
+  },
+  "parser": "babel-eslint",
+  "extends": ["airbnb-base", "loopback"],
+  "plugins": ["import"],
+  "rules": {
+      "no-use-before-define": 0
+    }
 }
