--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-node6": "^11.0.0",
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
-    "eslint": "^3.17.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-loopback": "^8.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
