--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ stages:
 buildProduction:
   stage: build
   image: node:6.11.5
+  except:
+    - pushes
   script: 
     - npm install
     - npm install -g gulp
@@ -27,6 +29,8 @@ test:
     - mongo:3.4
   dependencies:
     - buildProduction
+  except:
+    - pushes
   script: 
     - NODE_ENV=staging npm run unit_test
     - npm prune --production
@@ -46,6 +50,8 @@ testProduction:
     name: production
   dependencies:
     - buildProduction
+  except:
+    - pushes
   script: 
     - npm install -g mocha
     - NODE_ENV=production npm run unit_test
@@ -128,7 +134,6 @@ deployProduction:
   when: manual
   only:
     - tags
-    - production
   script:
     # Define Dynamic Variables
     - TIMESTAMP=$(date +%s)
