--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,9 @@ stages:
 buildProduction:
   stage: build
   image: node:6.11.5
-  except:
-    - pushes
+  only:
+    - master
+    - production
   script: 
     - npm install
     - npm install -g gulp
@@ -29,8 +30,9 @@ test:
     - mongo:3.4
   dependencies:
     - buildProduction
-  except:
-    - pushes
+  only:
+    - master
+    - production
   script: 
     - NODE_ENV=staging npm run unit_test
     - npm prune --production
@@ -50,8 +52,9 @@ testProduction:
     name: production
   dependencies:
     - buildProduction
-  except:
-    - pushes
+  only:
+    - master
+    - production
   script: 
     - npm install -g mocha
     - NODE_ENV=production npm run unit_test
@@ -77,7 +80,8 @@ deployDevelopment:
     - test
   when: manual
   only:
-    - pushes
+    - master
+    - production
   except:
     - master
     - production
@@ -134,6 +138,7 @@ deployProduction:
   when: manual
   only:
     - tags
+    - production
   script:
     # Define Dynamic Variables
     - TIMESTAMP=$(date +%s)
