--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ buildProduction:
   stage: build
   image: node:6.11.5
   only:
+    - tags
     - master
     - production
   script: 
@@ -31,6 +32,7 @@ test:
   dependencies:
     - buildProduction
   only:
+    - tags
     - master
     - production
   script: 
@@ -53,6 +55,7 @@ testProduction:
   dependencies:
     - buildProduction
   only:
+    - tags
     - master
     - production
   script: 
@@ -137,6 +140,7 @@ deployProduction:
     - testProduction
   when: manual
   only:
+    - tags
     - production
   script:
     # Define Dynamic Variables
