--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
       "no-use-before-define": 0,
       "object-curly-spacing": [2, "always"],
       "no-param-reassign": ["error", { "props": false }],
-      "max-len": ["error", 120]
+      "max-len": ["error", 120],
+      "camelcase": ["error", {"properties": "never"}]
     }
 }
