add prize model and logic

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -135,5 +135,9 @@
   "trial": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "prize": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
