--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-preset-node6": "^11.0.0",
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
+    "del": "^3.0.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-loopback": "^8.0.0",
