--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "build/server.js",
   "engines": {
-    "node": "6.11.5"
+    "node": ">=6.0.0"
   },
   "scripts": {
     "clean": "gulp clean",
     "transpile": "gulp transpile",
-    "build": "npm run clean && npm run transpile",
+    "stripdebug": "gulp stripdebug",
     "compress": "gulp compress",
+    "build": "npm run clean && npm run transpile && npm run stripdebug && npm run compress",
     "nodemon": "NODE_ENV=development gulp restart",
     "start:dev": "npm run build && npm run nodemon",
     "lint": "eslint .",
@@ -30,7 +31,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
     "loopback-component-passport": "^3.4.1",
-    "loopback-connector-mongodb": "^3.3.0",
+    "loopback-connector-mongodb": "^3.9.2",
     "md5": "^2.2.1",
     "moment": "^2.20.1",
     "multer": "^1.3.0",
